added the wp-info
